# hybrid_renderer

./: .gitignore  CMakeLists.txt  vcpkg.json
src/app/: main.cpp  render_demo.cpp  render_demo.h
src/asset/: json.h  scene_loader.cpp  scene_loader.h
src/core/: framebuffer.h  image.h  math.h  png_writer.cpp  png_writer.h  random.h  render_settings.h
src/geometry/: aabb.h  bvh.cpp  bvh.h  hit_record.h  ray.h  ray_scene.cpp  ray_scene.h  sphere.h  trace_primitive.cpp  trace_primitive.h
src/renderer/: gbuffer.h  irenderer.h  material_evaluator.h  pbr.h  render_mode.h  render_settings.h  tone_mapping.h  trace_primitive_builder.cpp  trace_primitive_builder.h
src/renderer/hybrid/: hybrid_renderer.cpp  hybrid_renderer.h
src/renderer/path_tracer/: path_tracer.cpp  path_tracer.h
src/renderer/rasterizer/: rasterizer.cpp  rasterizer.h
src/scene/: camera.h  light.h  material.h  mesh.h  obj_loader.cpp  obj_loader.h  scene.h  texture.h
tests/: gbuffer_tests.cpp  geometry_tests.cpp
tools/: compare.cpp
